# oxide_ansible_rust_module

./: .gitignore  README.md
ansible/: README.md  playbook.yml
ansible/oxide.computer/plugins/modules/: oxide_ssh_key  oxide_ssh_key.yml  oxide_ssh_key_info
source/: Cargo.toml
source/src/: oxide_ssh_key.rs  oxide_ssh_key_info.rs
