[package]
name = "oxide_ansible_modules"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "oxide_ssh_key"
path = "src/oxide_ssh_key.rs"
